# cowsay

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yaml  static.yml
src/: App.svelte  Cowsay.svelte  Updater.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  tor_check.rs
update/: latest.json
