[package]
name = "cowsay"
version = "0.0.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "shell-open"] }
arti-client = "0.12.0"
arti-hyper = "0.12.0"
tls-api = "0.9.0"
tls-api-native-tls = "0.9.0"
hyper = { version = "0.14", features = ["http1", "client", "runtime"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
thiserror = "1.0.50"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.75"
semver = { version = "1.0.20", features = ["serde"] }
serde_json = "1.0.108"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
